<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/activity_editor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="br.com.arthurgrangeiro.inventoryapp.EditorActivity">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            android:src="@drawable/image_placeholder" />

        <Button
            android:id="@+id/add_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_picture" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/product_name_design"
            style="@style/LineEditor">

            <EditText
                android:id="@+id/product_name_editor"
                style="@style/InputTextEditor"
                android:hint="@string/product_name_hint"
                android:imeOptions="actionNext"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/price_design"
            style="@style/LineEditor">

            <EditText
                android:id="@+id/price_editor"
                style="@style/InputTextEditor"
                android:hint="@string/price_hint"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/linear_layout_quantity"
            style="@style/LineEditor"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/quantity_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_quantity_editor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp"
                    android:paddingRight="8dp"
                    android:text="@string/text_quantity_list"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/textPrimary" />

                <TextView
                    android:id="@+id/quantity_editor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/textPrimary" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/quantity_modifiers_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_sale_editor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sale_list_button" />

                <EditText
                    android:id="@+id/quantity_new_value"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLines="1" />

                <Button
                    android:id="@+id/button_received_editor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/received_button" />
            </LinearLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/provider_editor_design"
            style="@style/LineEditor">

            <EditText
                android:id="@+id/provider_name_editor"
                style="@style/InputTextEditor"
                android:hint="@string/provider_hint"
                android:imeOptions="actionNext"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_editor_design"
            style="@style/LineEditor">

            <EditText
                android:id="@+id/email_provider_editor"
                style="@style/InputTextEditor"
                android:hint="@string/email_provider_hint"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/button_buy"
            style="@style/LineEditor"
            android:text="@string/buy_button" />
    </LinearLayout>
</ScrollView>